<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Chan</string>
    
    <string name="cancel">Cancel</string>
    <string name="change">Change</string>
    <string name="add">Add</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="ok">OK</string>
    
    <string name="action_settings">Settings</string>
    <string name="action_reload">Reload</string>
    <string name="action_reload_board">Reload board</string>
    <string name="action_reload_thread">Reload thread</string>
    <string name="action_pin">Pin</string>
    <string name="action_reply">Reply</string>
    <string name="action_reply_board">Reply to board</string>
    <string name="action_reply_thread">Reply to thread</string>
    <string name="action_open_browser">Open in browser</string>
    <string name="action_catalog">Open catalog</string>
    <string name="action_share">Share</string>
    
    <string name="open_unknown_title">Unsupported link</string>
    <string name="open_unknown">Chan can\'t open this link. Opening it in your browser instead.</string>
    <string name="open_link_failed">No applications found to open link</string>
    
    <string name="image_save">Save image</string>
    <string name="image_save_succeeded">Saved image to</string>
    <string name="image_save_failed">Saving image failed</string>
    <string name="image_save_directory_error">Cannot make save directory</string>
    <string name="image_save_not_mounted">Cannot write to storage</string>
    <string name="image_play_state">Start / stop playing</string>
    
    <string name="image_preview_failed">Failed to show image</string>
    <string name="image_open_failed">Failed to open image</string>
    
    <string name="thread_load_failed_network">No network</string>
    <string name="thread_load_failed_parsing">Server inaccessible</string>
    <string name="thread_load_failed_server">404 not found</string>
    <string name="thread_load_end_of_line">No more posts</string>
    
    <string name="board_edit">Edit my boards</string>
    <string name="board_add">Add board</string>
    <string name="board_add_success">Added board</string>
    <string name="board_add_duplicate">Board already added</string>
    <string name="board_add_unknown_title">Unknown board code</string>
    <string name="board_add_unknown">The board with code CODE is not known. Press OK to add it anyway.</string>
    
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="drawer_pinned">Pinned threads</string>
    <string name="drawer_pinned_change_title">Edit title</string>
    
    <string name="one_reply">reply</string>
    <string name="multiple_replies">replies</string>
    <string name="post_replies_back">Back</string>
    <string name="post_replies_close">Close</string>
    <string name="post_info">Info</string>
    <string-array name="post_options">
        <item>Reply</item>
        <item>Quote</item>
        <item>Info</item>
        <item>Show clickables</item>
        <item>Copy text</item>
    </string-array>
    
    <string name="reply">Reply to</string>
    <string name="reply_to_board">Make thread in</string>
    <string name="reply_name">Name</string>
    <string name="reply_email">Email</string>
    <string name="reply_subject">Subject</string>
    <string name="reply_comment">Comment</string>
    <string name="reply_file">Pick file</string>
    <string name="reply_file_delete">Remove file</string>
    <string name="reply_file_name">File name</string>
    <string name="reply_submit">Submit</string>
    <string name="reply_captcha">Enter the text</string>
    <string name="reply_error">Error sending reply</string>
    <string name="reply_error_captcha">Wrong captcha</string>
    <string name="reply_error_file">No file selected</string>
    <string name="reply_success">Post Successful</string>
    <string name="reply_captcha_load_error">Failed to load captcha</string>
    <string name="reply_captcha_tap_to_reload">Tap to reload the captcha</string>
    
    <string name="delete">Delete</string>
    <string name="delete_confirm">Delete your post?</string>
    <string name="delete_wait">Deleting post…</string>
    <string name="delete_success">Post deleted</string>
    <string name="delete_password_incorrect">Password incorrect</string>
    <string name="delete_too_soon">You must wait longer before deleting this post</string>
    <string name="delete_too_old">You cannot delete a post this old</string>
    <string name="delete_fail">Error deleting post</string>
    <string name="delete_image_only">Only delete the image</string>
    
    <string name="preference_watch_settings">Thread watcher</string>
    <string name="preference_pass_settings">4chan pass</string>
    
    <string name="preference_general">General</string>
    <string name="preference_open_link_confirmation">Ask before opening links</string>
    <string name="preference_autoplay">Start playing videos directly</string>
    
    <string name="preference_default_name">Default name</string>
    <string name="preference_default_email">Default email</string>
    
    <string name="preference_about">About</string>
    <string name="preference_licenses">Open Source Licenses</string>
    <string name="preference_licences_summary">Legal information about licenses</string>
    <string name="preference_developer">Developer options</string>
    
    <string name="open_link_confirmation">Open link?</string>
    
    <string name="watch_pause_pins">Stop watching</string>
    
    <string name="watch_summary_disabled">Off</string>
    <string name="watch_summary_enabled">Watching pinned threads</string>
    <string name="watch_info_text">To watch pins for new posts, turn the thread watcher on.</string>
    
    <string name="watch_enable_background">Enable in the background</string>
    <string name="watch_enable_background_on">Watching pins when Chan is in the background</string>
    <string name="watch_enable_background_off">Not watching when Chan is in the background</string>
    <string name="watch_background_timeout_description">Time between reloads in background</string>
    <string-array name="watch_background_timeouts">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>30 minutes</item>
        <item>60 minutes</item>
    </string-array>
    <string-array name="watch_background_timeouts_int">
        <item>60</item>
        <item>120</item>
        <item>180</item>
        <item>300</item>
        <item>600</item>
        <item>1800</item>
        <item>3600</item>
    </string-array>
    
    <string name="pass_info_text">4chan pass enables you to post without filling in CAPTCHAs</string>
    <string name="pass_info_learn_more">Learn more</string>
    <string name="pass_info_link">https://www.4chan.org/pass</string>
    <string name="pass_token">Token</string>
    <string name="pass_pin">PIN</string>
    <string name="pass_login">Log in</string>
    <string name="pass_logout">Log out</string>
    <string name="pass_error">Connection error</string>
    <string name="pass_summary_enabled">Using 4chan pass</string>
    <string name="pass_summary_disabled">Off</string>
    <string name="pass_using">Using 4chan pass</string>
</resources>





