<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
	<PreferenceCategory
	    android:title="@string/preference_general" >
	    
	    <Preference
	        android:title="@string/board_edit" >
	        <intent
	             android:action="android.intent.action.VIEW"
	             android:targetPackage="org.floens.chan"
	             android:targetClass="org.floens.chan.activity.BoardEditor" /> 
	    </Preference>
	    
	    <CheckBoxPreference
	        android:title="@string/preference_open_link_confirmation"
	        android:key="preference_open_link_confirmation"
	        android:defaultValue="true" />
	    
	    <EditTextPreference 
	        android:title="@string/preference_default_name"
	        android:key="preference_default_name" />
	    
	    <EditTextPreference 
            android:title="@string/preference_default_email"
            android:key="preference_default_email" />
	    
	</PreferenceCategory>
    
    <PreferenceCategory 
        android:title="@string/preference_about"
        android:key="group_about" >
        
        <Preference
	        android:title="@string/preference_licenses"
	        android:summary="@string/preference_licences_summary"
	        android:key="about_licences" />
             
        <Preference
            android:title="Chan"
            android:key="about_version" />
        
        <Preference
            android:title="@string/preference_developer"
            android:key="about_developer" >
            <intent
                 android:action="android.intent.action.VIEW"
                 android:targetPackage="org.floens.chan"
                 android:targetClass="org.floens.chan.activity.DeveloperActivity" /> 
        </Preference>
        
    </PreferenceCategory>
</PreferenceScreen>





