<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/action_reload"
        android:icon="@drawable/ic_action_refresh"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/action_reload" />
    
    <item
        android:id="@+id/action_pin"
        android:icon="@drawable/ic_action_make_available_offline"
        android:orderInCategory="2"
        android:showAsAction="always"
        android:title="@string/action_pin" />

    <item 
        android:id="@+id/action_reply"
        android:icon="@drawable/ic_action_chat"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/action_reply" />
    
    <item 
        android:id="@+id/action_reply_tablet"
        android:icon="@drawable/ic_action_chat"
        android:orderInCategory="4"
        android:showAsAction="ifRoom"
        android:title="@string/action_reply" >
        <menu>
            <item
                android:id="@+id/action_reply_board"
                android:title="@string/action_reply_board" />
            <item
                android:id="@+id/action_reply_thread"
                android:title="@string/action_reply_thread" />
        </menu>
        
    </item>
        
    
    <item
		android:id="@+id/action_share"
		android:orderInCategory="5"
        android:showAsAction="never"
		android:title="@string/action_share"
		android:actionProviderClass="android.widget.ShareActionProvider" />
    
    <item
        android:id="@+id/action_open_browser"
        android:orderInCategory="6"
        android:showAsAction="never"
        android:title="@string/action_open_browser" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />

</menu>
