<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_image_play_state"
        android:icon="@drawable/ic_action_play"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/image_play_state"/>
    <item
        android:id="@+id/action_image_save"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/image_save"/>
    <item
        android:id="@+id/action_open_browser"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/action_open_browser"/>
    <item
        android:id="@+id/action_share"
        android:orderInCategory="4"
        android:showAsAction="never"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_download_album"
        android:orderInCategory="5"
        android:showAsAction="never"
        android:title="@string/action_download_album"/>

</menu>